--- a/Thesis/res/layout/activity_selected_thesis.xml
+++ b/Thesis/res/layout/activity_selected_thesis.xml
@@ -94,7 +94,8 @@
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
         android:background="#bcbcbc" />
-    <TextView
+
+    <TextView
         android:id="@+id/thirdTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,5 +113,12 @@
         android:layout_marginTop="5dp"
         android:lineSpacingExtra="2dp"
         android:textSize="18dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
+        android:background="#bcbcbc" />
 
 </LinearLayout>
