--- a/Thesis/res/layout/activity_upload.xml
+++ b/Thesis/res/layout/activity_upload.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dddddd"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context=".UploadActivity" >
 
     <RelativeLayout
         android:id="@+id/title"
@@ -38,55 +37,25 @@
             android:layout_marginStart="@dimen/qq_dimen_8px"
             android:layout_toEndOf="@+id/img"
             android:layout_toRightOf="@+id/img"
-            android:text="@string/button_chat"
+            android:text="@string/message_detail"
             android:textColor="@android:color/white"
             android:textSize="@dimen/qq_dimen_30px" />
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/list_chat"
+    <Button
+        android:id="@+id/button_upload"
         android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/button_selector"
+        android:text="@string/upload"
+        android:textSize="20dp" />
+
+    <ListView
+        android:id="@+id/list_file"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
-        android:layout_marginBottom="38dp"
-        android:background="#dddddd"
-        android:cacheColorHint="#00000000"
-        android:divider="@null"
-        android:listSelector="#00000000"
-        android:transcriptMode="normal" >
-    </ListView>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ffffff" >
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentTop="true"
-            android:background="#bcbcbc" />
-
-        <ImageButton
-            android:id="@+id/button_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/blank_selector"
-            android:src="@drawable/ic_menu_send" />
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/button_send"
-            android:layout_toStartOf="@id/button_send"
-            android:background="@drawable/edittext_selector" />
-    </RelativeLayout>
+        android:layout_marginBottom="40dp" />
 
 </RelativeLayout>
